Bug 1927943 [wpt PR 48869] - Fix upstream merge issues in 2d.composite.grid.* WPT tests, a=testonly
Automatic update from web-platform-tests
Fix upstream merge issues in 2d.composite.grid.* WPT tests

When https://crrev.com/c/5889473 was merged upstream to WPT, the
operation failed and required manual intervention. The incorrect
patchset got merged, which resulted in the changes from the latest
patchsets to be later reverted by the WPT Autoroller
(https://crrev.com/c/5950284). This CL fixes this merge issue.

Bug: 364549423
Change-Id: I87cc16b1615f9874e38a4616bfe1f5d084381e6e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5972984
Reviewed-by: Jonathan Lee <jonathanjleegoogle.com>
Commit-Queue: Jean-Philippe Gravel <jpgravelchromium.org>
Cr-Commit-Position: refs/heads/main{#1375510}

--

wpt-commits: 01df1a69fe29b3dd23427dce89d0bc0008fea853
wpt-pr: 48869

UltraBlame original commit: cb11bb139b2d4af4997f987f76e76f90b10539a5

--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.fillRect.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.fillRect.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,10 +377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -392,6 +396,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -520,11 +525,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -604,10 +612,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -622,6 +631,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -750,11 +760,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -834,10 +847,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -852,6 +866,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -980,11 +995,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1064,10 +1082,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1082,6 +1101,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1210,11 +1230,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1294,10 +1317,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1312,6 +1336,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -1440,11 +1465,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1524,10 +1552,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1542,6 +1571,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1670,11 +1700,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1754,10 +1787,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1772,6 +1806,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1900,11 +1935,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1984,10 +2022,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2002,6 +2041,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -2128,11 +2168,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2212,10 +2255,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2228,6 +2272,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -2354,11 +2399,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2438,10 +2486,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2454,6 +2503,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -2580,11 +2630,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2664,10 +2717,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2680,6 +2734,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -2806,11 +2861,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2890,10 +2948,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2906,6 +2965,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -3032,11 +3092,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3116,10 +3179,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3132,6 +3196,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -3258,11 +3323,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3342,10 +3410,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3358,6 +3427,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -3484,11 +3554,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3568,10 +3641,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3584,6 +3658,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -3710,11 +3785,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3794,10 +3872,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3810,6 +3889,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -3938,11 +4018,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4022,10 +4105,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4040,6 +4124,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -4168,11 +4253,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4252,10 +4340,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4270,6 +4359,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -4398,11 +4488,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4482,10 +4575,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4500,6 +4594,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -4628,11 +4723,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4712,10 +4810,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4730,6 +4829,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -4856,11 +4956,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4940,10 +5043,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4956,6 +5060,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -5082,11 +5187,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5166,10 +5274,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5182,6 +5291,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -5308,11 +5418,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5392,10 +5505,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5408,6 +5522,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -5534,11 +5649,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5618,10 +5736,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5634,6 +5753,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -5760,11 +5880,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5844,10 +5967,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5860,6 +5984,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -5986,11 +6111,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6070,10 +6198,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6086,6 +6215,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
