--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.pattern.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.pattern.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,10 +377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -392,6 +396,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -566,11 +571,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -650,10 +658,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -668,6 +677,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -842,11 +852,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -926,10 +939,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -944,6 +958,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1118,11 +1133,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1202,10 +1220,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1220,6 +1239,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1394,11 +1414,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1478,10 +1501,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1496,6 +1520,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1670,11 +1695,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1754,10 +1782,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1772,6 +1801,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -1946,11 +1976,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2030,10 +2063,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2048,6 +2082,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2222,11 +2257,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2306,10 +2344,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2324,6 +2363,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2496,11 +2536,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2580,10 +2623,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2596,6 +2640,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2768,11 +2813,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2852,10 +2900,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2868,6 +2917,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3040,11 +3090,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3124,10 +3177,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3140,6 +3194,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3312,11 +3367,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3396,10 +3454,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3412,6 +3471,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3584,11 +3644,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3668,10 +3731,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3684,6 +3748,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -3856,11 +3921,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3940,10 +4008,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3956,6 +4025,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4128,11 +4198,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4212,10 +4285,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4228,6 +4302,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4400,11 +4475,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4484,10 +4562,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4500,6 +4579,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -4674,11 +4754,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4758,10 +4841,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4776,6 +4860,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -4950,11 +5035,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5034,10 +5122,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5052,6 +5141,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5226,11 +5316,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5310,10 +5403,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5328,6 +5422,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5502,11 +5597,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5586,10 +5684,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5604,6 +5703,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5776,11 +5876,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5860,10 +5963,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5876,6 +5980,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6048,11 +6153,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6132,10 +6240,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6148,6 +6257,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6320,11 +6430,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6404,10 +6517,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6420,6 +6534,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -6592,11 +6707,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6676,10 +6794,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6692,6 +6811,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -6864,11 +6984,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6948,10 +7071,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6964,6 +7088,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -7136,11 +7261,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7220,10 +7348,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -7236,6 +7365,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
