--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.shadow.drawImage.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.shadow.drawImage.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,10 +377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -395,11 +399,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -412,6 +419,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -573,11 +581,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -657,10 +668,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -678,11 +690,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -695,6 +710,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -856,11 +872,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -940,10 +959,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -961,11 +981,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -978,6 +1001,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1139,11 +1163,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1223,10 +1250,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1244,11 +1272,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1261,6 +1292,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1422,11 +1454,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1506,10 +1541,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1527,11 +1563,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1544,6 +1583,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1705,11 +1745,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1789,10 +1832,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1810,11 +1854,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1827,6 +1874,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -1988,11 +2036,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2072,10 +2123,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2093,11 +2145,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2110,6 +2165,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2271,11 +2327,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2355,10 +2414,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2376,11 +2436,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2393,6 +2456,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2552,11 +2616,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2636,10 +2703,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2657,11 +2725,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2672,6 +2743,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2831,11 +2903,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2915,10 +2990,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2936,11 +3012,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2951,6 +3030,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3110,11 +3190,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3194,10 +3277,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3215,11 +3299,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3230,6 +3317,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3389,11 +3477,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3473,10 +3564,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3494,11 +3586,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3509,6 +3604,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3668,11 +3764,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3752,10 +3851,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3773,11 +3873,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3788,6 +3891,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -3947,11 +4051,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4031,10 +4138,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4052,11 +4160,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4067,6 +4178,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4226,11 +4338,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4310,10 +4425,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4331,11 +4447,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4346,6 +4465,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4505,11 +4625,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4589,10 +4712,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4610,11 +4734,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4625,6 +4752,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -4786,11 +4914,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4870,10 +5001,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4891,11 +5023,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4908,6 +5043,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5069,11 +5205,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5153,10 +5292,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5174,11 +5314,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5191,6 +5334,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5352,11 +5496,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5436,10 +5583,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5457,11 +5605,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5474,6 +5625,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5635,11 +5787,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5719,10 +5874,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5740,11 +5896,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5757,6 +5916,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5916,11 +6076,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6000,10 +6163,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6021,11 +6185,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6036,6 +6203,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6195,11 +6363,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6279,10 +6450,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6300,11 +6472,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6315,6 +6490,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6474,11 +6650,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6558,10 +6737,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6579,11 +6759,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6594,6 +6777,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -6753,11 +6937,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6837,10 +7024,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6858,11 +7046,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6873,6 +7064,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -7032,11 +7224,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7116,10 +7311,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7137,11 +7333,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7152,6 +7351,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -7311,11 +7511,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7395,10 +7598,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7416,11 +7620,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7431,6 +7638,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
