--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.no_filter.no_shadow.fillRect.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.no_filter.no_shadow.fillRect.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -376,6 +379,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -504,11 +508,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -590,6 +597,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -718,11 +726,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -804,6 +815,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -932,11 +944,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1018,6 +1033,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1146,11 +1162,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1232,6 +1251,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -1360,11 +1380,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1446,6 +1469,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1574,11 +1598,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1660,6 +1687,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1788,11 +1816,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1874,6 +1905,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -2000,11 +2032,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2084,6 +2119,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -2210,11 +2246,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2294,6 +2333,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -2420,11 +2460,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2504,6 +2547,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -2630,11 +2674,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2714,6 +2761,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -2840,11 +2888,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2924,6 +2975,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -3050,11 +3102,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3134,6 +3189,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -3260,11 +3316,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3344,6 +3403,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -3470,11 +3530,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3554,6 +3617,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -3682,11 +3746,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3768,6 +3835,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -3896,11 +3964,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3982,6 +4053,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -4110,11 +4182,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4196,6 +4271,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -4324,11 +4400,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4410,6 +4489,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -4536,11 +4616,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4620,6 +4703,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -4746,11 +4830,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4830,6 +4917,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -4956,11 +5044,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5040,6 +5131,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -5166,11 +5258,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5250,6 +5345,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -5376,11 +5472,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5460,6 +5559,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -5586,11 +5686,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5670,6 +5773,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
