--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.no_shadow.drawImage.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.no_shadow.drawImage.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -372,10 +375,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -390,6 +394,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -582,11 +587,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -666,10 +674,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -684,6 +693,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -876,11 +886,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -960,10 +973,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -978,6 +992,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1170,11 +1185,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1254,10 +1272,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1272,6 +1291,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1464,11 +1484,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1548,10 +1571,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1566,6 +1590,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1758,11 +1783,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1842,10 +1870,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1860,6 +1889,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2052,11 +2082,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2136,10 +2169,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2154,6 +2188,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2346,11 +2381,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2430,10 +2468,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2448,6 +2487,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2638,11 +2678,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2722,10 +2765,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2738,6 +2782,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2928,11 +2973,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3012,10 +3060,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3028,6 +3077,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3218,11 +3268,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3302,10 +3355,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3318,6 +3372,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3508,11 +3563,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3592,10 +3650,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3608,6 +3667,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3798,11 +3858,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3882,10 +3945,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3898,6 +3962,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -4088,11 +4153,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4172,10 +4240,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4188,6 +4257,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4378,11 +4448,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4462,10 +4535,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4478,6 +4552,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4668,11 +4743,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4752,10 +4830,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4768,6 +4847,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -4960,11 +5040,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5044,10 +5127,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5062,6 +5146,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5254,11 +5339,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5338,10 +5426,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5356,6 +5445,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5548,11 +5638,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5632,10 +5725,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5650,6 +5744,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5842,11 +5937,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5926,10 +6024,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5944,6 +6043,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6134,11 +6234,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6218,10 +6321,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6234,6 +6338,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6424,11 +6529,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6508,10 +6616,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6524,6 +6633,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6714,11 +6824,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6798,10 +6911,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6814,6 +6928,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -7004,11 +7119,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7088,10 +7206,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -7104,6 +7223,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -7294,11 +7414,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7378,10 +7501,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -7394,6 +7518,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -7584,11 +7709,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7668,10 +7796,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -7684,6 +7813,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
