--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.no_shadow.fillRect.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.no_shadow.fillRect.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -372,10 +375,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -390,6 +394,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -549,11 +554,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -633,10 +641,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -651,6 +660,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -810,11 +820,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -894,10 +907,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -912,6 +926,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1071,11 +1086,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1155,10 +1173,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1173,6 +1192,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1332,11 +1352,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1416,10 +1439,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1434,6 +1458,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -1593,11 +1618,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1677,10 +1705,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1695,6 +1724,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1854,11 +1884,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1938,10 +1971,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1956,6 +1990,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -2115,11 +2150,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2199,10 +2237,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2217,6 +2256,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -2374,11 +2414,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2458,10 +2501,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2474,6 +2518,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -2631,11 +2676,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2715,10 +2763,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2731,6 +2780,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -2888,11 +2938,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2972,10 +3025,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2988,6 +3042,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -3145,11 +3200,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3229,10 +3287,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3245,6 +3304,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -3402,11 +3462,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3486,10 +3549,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3502,6 +3566,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -3659,11 +3724,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3743,10 +3811,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3759,6 +3828,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -3916,11 +3986,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4000,10 +4073,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4016,6 +4090,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -4173,11 +4248,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4257,10 +4335,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4273,6 +4352,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -4432,11 +4512,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4516,10 +4599,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4534,6 +4618,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -4693,11 +4778,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4777,10 +4865,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4795,6 +4884,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -4954,11 +5044,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5038,10 +5131,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5056,6 +5150,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5215,11 +5310,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5299,10 +5397,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5317,6 +5416,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5474,11 +5574,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5558,10 +5661,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5574,6 +5678,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -5731,11 +5836,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5815,10 +5923,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5831,6 +5940,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -5988,11 +6098,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6072,10 +6185,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6088,6 +6202,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -6245,11 +6360,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6329,10 +6447,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6345,6 +6464,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -6502,11 +6622,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6586,10 +6709,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6602,6 +6726,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -6759,11 +6884,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6843,10 +6971,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6859,6 +6988,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
