--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.drawImage.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.drawImage.w.html
@@ -90,13 +90,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -325,11 +325,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -409,10 +412,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -430,11 +434,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -447,6 +454,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -769,11 +777,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -853,10 +864,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -874,11 +886,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -891,6 +906,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -1213,11 +1229,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1297,10 +1316,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1318,11 +1338,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1335,6 +1358,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1657,11 +1681,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1741,10 +1768,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1762,11 +1790,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1779,6 +1810,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2101,11 +2133,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2185,10 +2220,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2206,11 +2242,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2223,6 +2262,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -2545,11 +2585,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2629,10 +2672,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2650,11 +2694,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2667,6 +2714,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2989,11 +3037,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3073,10 +3124,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3094,11 +3146,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3111,6 +3166,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -3433,11 +3489,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3517,10 +3576,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3538,11 +3598,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3555,6 +3618,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -3875,11 +3939,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3959,10 +4026,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3980,11 +4048,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3995,6 +4066,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -4315,11 +4387,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4399,10 +4474,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4420,11 +4496,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4435,6 +4514,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -4755,11 +4835,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4839,10 +4922,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4860,11 +4944,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4875,6 +4962,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -5195,11 +5283,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5279,10 +5370,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5300,11 +5392,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5315,6 +5410,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -5635,11 +5731,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5719,10 +5818,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5740,11 +5840,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5755,6 +5858,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -6075,11 +6179,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6159,10 +6266,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6180,11 +6288,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6195,6 +6306,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -6515,11 +6627,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6599,10 +6714,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6620,11 +6736,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6635,6 +6754,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -6955,11 +7075,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7039,10 +7162,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7060,11 +7184,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7075,6 +7202,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -7397,11 +7525,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7481,10 +7612,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7502,11 +7634,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7519,6 +7654,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -7841,11 +7977,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7925,10 +8064,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7946,11 +8086,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7963,6 +8106,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -8285,11 +8429,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8369,10 +8516,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8390,11 +8538,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8407,6 +8558,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -8729,11 +8881,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8813,10 +8968,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8834,11 +8990,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8851,6 +9010,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -9171,11 +9331,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9255,10 +9418,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -9276,11 +9440,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9291,6 +9458,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -9611,11 +9779,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9695,10 +9866,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -9716,11 +9888,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9731,6 +9906,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -10051,11 +10227,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10135,10 +10314,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -10156,11 +10336,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10171,6 +10354,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -10491,11 +10675,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10575,10 +10762,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -10596,11 +10784,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10611,6 +10802,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -10931,11 +11123,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -11015,10 +11210,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -11036,11 +11232,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -11051,6 +11250,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -11371,11 +11571,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -11455,10 +11658,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -11476,11 +11680,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -11491,6 +11698,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
