--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.fillRect.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.fillRect.w.html
@@ -90,13 +90,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -325,11 +325,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -409,10 +412,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -430,11 +434,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -447,6 +454,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -736,11 +744,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -820,10 +831,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -841,11 +853,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -858,6 +873,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1147,11 +1163,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1231,10 +1250,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1252,11 +1272,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1269,6 +1292,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1558,11 +1582,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1642,10 +1669,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1663,11 +1691,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1680,6 +1711,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1969,11 +2001,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2053,10 +2088,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2074,11 +2110,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2091,6 +2130,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -2380,11 +2420,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2464,10 +2507,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2485,11 +2529,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2502,6 +2549,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -2791,11 +2839,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2875,10 +2926,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2896,11 +2948,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2913,6 +2968,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -3202,11 +3258,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3286,10 +3345,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3307,11 +3367,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3324,6 +3387,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -3611,11 +3675,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3695,10 +3762,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3716,11 +3784,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3731,6 +3802,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -4018,11 +4090,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4102,10 +4177,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4123,11 +4199,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4138,6 +4217,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -4425,11 +4505,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4509,10 +4592,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4530,11 +4614,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4545,6 +4632,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -4832,11 +4920,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4916,10 +5007,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4937,11 +5029,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4952,6 +5047,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -5239,11 +5335,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5323,10 +5422,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5344,11 +5444,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5359,6 +5462,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -5646,11 +5750,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5730,10 +5837,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5751,11 +5859,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5766,6 +5877,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -6053,11 +6165,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6137,10 +6252,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6158,11 +6274,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6173,6 +6292,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -6460,11 +6580,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6544,10 +6667,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6565,11 +6689,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6580,6 +6707,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -6869,11 +6997,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6953,10 +7084,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6974,11 +7106,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6991,6 +7126,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -7280,11 +7416,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7364,10 +7503,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7385,11 +7525,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7402,6 +7545,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -7691,11 +7835,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7775,10 +7922,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7796,11 +7944,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7813,6 +7964,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -8102,11 +8254,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8186,10 +8341,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8207,11 +8363,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8224,6 +8383,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -8511,11 +8671,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8595,10 +8758,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8616,11 +8780,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8631,6 +8798,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -8918,11 +9086,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9002,10 +9173,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -9023,11 +9195,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9038,6 +9213,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -9325,11 +9501,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9409,10 +9588,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -9430,11 +9610,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9445,6 +9628,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -9732,11 +9916,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9816,10 +10003,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -9837,11 +10025,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9852,6 +10043,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -10139,11 +10331,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10223,10 +10418,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -10244,11 +10440,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10259,6 +10458,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -10546,11 +10746,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10630,10 +10833,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -10651,11 +10855,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10666,6 +10873,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
