--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.pattern.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.filter.shadow.pattern.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -372,10 +375,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -393,11 +397,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -410,6 +417,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -615,11 +623,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -699,10 +710,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -720,11 +732,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -737,6 +752,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -942,11 +958,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1026,10 +1045,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1047,11 +1067,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1064,6 +1087,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1269,11 +1293,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1353,10 +1380,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1374,11 +1402,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1391,6 +1422,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1596,11 +1628,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1680,10 +1715,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1701,11 +1737,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1718,6 +1757,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1923,11 +1963,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2007,10 +2050,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2028,11 +2072,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2045,6 +2092,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2250,11 +2298,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2334,10 +2385,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2355,11 +2407,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2372,6 +2427,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2577,11 +2633,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2661,10 +2720,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2682,11 +2742,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2699,6 +2762,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2902,11 +2966,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2986,10 +3053,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3007,11 +3075,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3022,6 +3093,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -3225,11 +3297,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3309,10 +3384,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3330,11 +3406,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3345,6 +3424,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3548,11 +3628,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3632,10 +3715,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3653,11 +3737,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3668,6 +3755,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3871,11 +3959,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3955,10 +4046,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3976,11 +4068,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3991,6 +4086,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -4194,11 +4290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4278,10 +4377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4299,11 +4399,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4314,6 +4417,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -4517,11 +4621,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4601,10 +4708,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4622,11 +4730,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4637,6 +4748,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4840,11 +4952,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4924,10 +5039,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4945,11 +5061,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4960,6 +5079,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -5163,11 +5283,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5247,10 +5370,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5268,11 +5392,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5283,6 +5410,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -5488,11 +5616,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5572,10 +5703,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5593,11 +5725,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5610,6 +5745,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5815,11 +5951,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5899,10 +6038,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5920,11 +6060,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5937,6 +6080,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -6142,11 +6286,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6226,10 +6373,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6247,11 +6395,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6264,6 +6415,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6469,11 +6621,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6553,10 +6708,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6574,11 +6730,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6591,6 +6750,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6794,11 +6954,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6878,10 +7041,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6899,11 +7063,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6914,6 +7081,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -7117,11 +7285,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7201,10 +7372,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7222,11 +7394,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7237,6 +7412,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -7440,11 +7616,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7524,10 +7703,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7545,11 +7725,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7560,6 +7743,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -7763,11 +7947,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7847,10 +8034,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -7868,11 +8056,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7883,6 +8074,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -8086,11 +8278,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8170,10 +8365,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8191,11 +8387,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8206,6 +8405,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -8409,11 +8609,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8493,10 +8696,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -8514,11 +8718,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8529,6 +8736,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
