--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.no_shadow.pattern.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.no_shadow.pattern.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,6 +377,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -579,11 +583,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -665,6 +672,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -870,11 +878,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -956,6 +967,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1161,11 +1173,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1247,6 +1262,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1452,11 +1468,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1538,6 +1557,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1743,11 +1763,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1829,6 +1852,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2034,11 +2058,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2120,6 +2147,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2325,11 +2353,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2411,6 +2442,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2614,11 +2646,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2698,6 +2733,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2901,11 +2937,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2985,6 +3024,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3188,11 +3228,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3272,6 +3315,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3475,11 +3519,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3559,6 +3606,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3762,11 +3810,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3846,6 +3897,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -4049,11 +4101,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4133,6 +4188,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4336,11 +4392,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4420,6 +4479,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4623,11 +4683,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4707,6 +4770,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -4912,11 +4976,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4998,6 +5065,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5203,11 +5271,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5289,6 +5360,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5494,11 +5566,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5580,6 +5655,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5785,11 +5861,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5871,6 +5950,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6074,11 +6154,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6158,6 +6241,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6361,11 +6445,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6445,6 +6532,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6648,11 +6736,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6732,6 +6823,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -6935,11 +7027,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7019,6 +7114,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -7222,11 +7318,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7306,6 +7405,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -7509,11 +7609,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7593,6 +7696,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
