--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.drawImage.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.drawImage.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -377,11 +380,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -394,6 +400,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -586,11 +593,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -675,11 +685,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -692,6 +705,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -884,11 +898,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -973,11 +990,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -990,6 +1010,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1182,11 +1203,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1271,11 +1295,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1288,6 +1315,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1480,11 +1508,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1569,11 +1600,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1586,6 +1620,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1778,11 +1813,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1867,11 +1905,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1884,6 +1925,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2076,11 +2118,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2165,11 +2210,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2182,6 +2230,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2374,11 +2423,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2463,11 +2515,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2480,6 +2535,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2670,11 +2726,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2759,11 +2818,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2774,6 +2836,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2964,11 +3027,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3053,11 +3119,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3068,6 +3137,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3258,11 +3328,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3347,11 +3420,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3362,6 +3438,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3552,11 +3629,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3641,11 +3721,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3656,6 +3739,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3846,11 +3930,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3935,11 +4022,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3950,6 +4040,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -4140,11 +4231,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4229,11 +4323,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4244,6 +4341,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4434,11 +4532,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4523,11 +4624,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4538,6 +4642,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4728,11 +4833,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4817,11 +4925,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4832,6 +4943,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -5024,11 +5136,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5113,11 +5228,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5130,6 +5248,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5322,11 +5441,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5411,11 +5533,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5428,6 +5553,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5620,11 +5746,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5709,11 +5838,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5726,6 +5858,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5918,11 +6051,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6007,11 +6143,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6024,6 +6163,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6214,11 +6354,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6303,11 +6446,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6318,6 +6464,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6508,11 +6655,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6597,11 +6747,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6612,6 +6765,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6802,11 +6956,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6891,11 +7048,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6906,6 +7066,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -7096,11 +7257,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7185,11 +7349,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7200,6 +7367,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -7390,11 +7558,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7479,11 +7650,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7494,6 +7668,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -7684,11 +7859,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7773,11 +7951,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7788,6 +7969,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
