--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.fillRect.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.fillRect.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -377,11 +380,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -394,6 +400,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -553,11 +560,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -642,11 +652,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -659,6 +672,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -818,11 +832,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -907,11 +924,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -924,6 +944,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1083,11 +1104,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1172,11 +1196,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1189,6 +1216,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1348,11 +1376,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1437,11 +1468,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1454,6 +1488,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -1613,11 +1648,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1702,11 +1740,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1719,6 +1760,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1878,11 +1920,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1967,11 +2012,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1984,6 +2032,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -2143,11 +2192,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2232,11 +2284,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2249,6 +2304,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -2406,11 +2462,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2495,11 +2554,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2510,6 +2572,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -2667,11 +2730,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2756,11 +2822,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2771,6 +2840,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -2928,11 +2998,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3017,11 +3090,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3032,6 +3108,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -3189,11 +3266,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3278,11 +3358,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3293,6 +3376,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -3450,11 +3534,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3539,11 +3626,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3554,6 +3644,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -3711,11 +3802,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3800,11 +3894,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3815,6 +3912,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -3972,11 +4070,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4061,11 +4162,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4076,6 +4180,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -4233,11 +4338,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4322,11 +4430,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4337,6 +4448,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -4496,11 +4608,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4585,11 +4700,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4602,6 +4720,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -4761,11 +4880,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4850,11 +4972,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4867,6 +4992,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -5026,11 +5152,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5115,11 +5244,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5132,6 +5264,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5291,11 +5424,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5380,11 +5516,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5397,6 +5536,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5554,11 +5694,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5643,11 +5786,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5658,6 +5804,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -5815,11 +5962,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5904,11 +6054,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5919,6 +6072,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -6076,11 +6230,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6165,11 +6322,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6180,6 +6340,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -6337,11 +6498,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6426,11 +6590,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6441,6 +6608,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -6598,11 +6766,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6687,11 +6858,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6702,6 +6876,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -6859,11 +7034,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6948,11 +7126,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6963,6 +7144,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
