--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.fillRect.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.fillRect.w.html
@@ -90,13 +90,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -325,11 +325,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -414,11 +417,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -431,6 +437,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -720,11 +727,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -809,11 +819,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -826,6 +839,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1115,11 +1129,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1204,11 +1221,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1221,6 +1241,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1510,11 +1531,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1599,11 +1623,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1616,6 +1643,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1905,11 +1933,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1994,11 +2025,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2011,6 +2045,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -2300,11 +2335,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2389,11 +2427,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2406,6 +2447,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -2695,11 +2737,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2784,11 +2829,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2801,6 +2849,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -3090,11 +3139,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3179,11 +3231,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3196,6 +3251,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -3483,11 +3539,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3572,11 +3631,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3587,6 +3649,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -3874,11 +3937,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3963,11 +4029,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3978,6 +4047,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -4265,11 +4335,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4354,11 +4427,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4369,6 +4445,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -4656,11 +4733,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4745,11 +4825,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4760,6 +4843,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -5047,11 +5131,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5136,11 +5223,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5151,6 +5241,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -5438,11 +5529,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5527,11 +5621,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5542,6 +5639,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -5829,11 +5927,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5918,11 +6019,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5933,6 +6037,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -6220,11 +6325,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6309,11 +6417,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6324,6 +6435,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -6613,11 +6725,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6702,11 +6817,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6719,6 +6837,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -7008,11 +7127,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7097,11 +7219,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7114,6 +7239,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -7403,11 +7529,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7492,11 +7621,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7509,6 +7641,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -7798,11 +7931,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7887,11 +8023,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7904,6 +8043,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -8191,11 +8331,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8280,11 +8423,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8295,6 +8441,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -8582,11 +8729,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8671,11 +8821,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8686,6 +8839,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -8973,11 +9127,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9062,11 +9219,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9077,6 +9237,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -9364,11 +9525,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9453,11 +9617,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9468,6 +9635,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -9755,11 +9923,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9844,11 +10015,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9859,6 +10033,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -10146,11 +10321,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10235,11 +10413,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10250,6 +10431,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
