--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.pattern.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.pattern.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -288,11 +288,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -377,11 +380,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -394,6 +400,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -599,11 +606,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -688,11 +698,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -705,6 +718,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -910,11 +924,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -999,11 +1016,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1016,6 +1036,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1221,11 +1242,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1310,11 +1334,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1327,6 +1354,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1532,11 +1560,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1621,11 +1652,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1638,6 +1672,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1843,11 +1878,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1932,11 +1970,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1949,6 +1990,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2154,11 +2196,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2243,11 +2288,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2260,6 +2308,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2465,11 +2514,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2554,11 +2606,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2571,6 +2626,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2774,11 +2830,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2863,11 +2922,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2878,6 +2940,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -3081,11 +3144,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3170,11 +3236,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3185,6 +3254,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -3388,11 +3458,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3477,11 +3550,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3492,6 +3568,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3695,11 +3772,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3784,11 +3864,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3799,6 +3882,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -4002,11 +4086,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4091,11 +4178,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4106,6 +4196,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -4309,11 +4400,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4398,11 +4492,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4413,6 +4510,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -4616,11 +4714,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4705,11 +4806,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4720,6 +4824,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4923,11 +5028,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5012,11 +5120,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5027,6 +5138,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -5232,11 +5344,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5321,11 +5436,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5338,6 +5456,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -5543,11 +5662,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5632,11 +5754,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5649,6 +5774,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -5854,11 +5980,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5943,11 +6072,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5960,6 +6092,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6165,11 +6298,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6254,11 +6390,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6271,6 +6410,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -6474,11 +6614,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6563,11 +6706,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6578,6 +6724,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -6781,11 +6928,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6870,11 +7020,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6885,6 +7038,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -7088,11 +7242,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7177,11 +7334,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7192,6 +7352,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -7395,11 +7556,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7484,11 +7648,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7499,6 +7666,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -7702,11 +7870,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7791,11 +7962,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7806,6 +7980,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -8009,11 +8184,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8098,11 +8276,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8113,6 +8294,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
