--- a/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.pattern.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/compositing/2d.composite.grid.no_filter.shadow.pattern.w.html
@@ -90,13 +90,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -325,11 +325,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -414,11 +417,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -431,6 +437,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -766,11 +773,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -855,11 +865,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -872,6 +885,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -1207,11 +1221,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1296,11 +1313,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1313,6 +1333,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1648,11 +1669,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1737,11 +1761,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1754,6 +1781,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2089,11 +2117,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2178,11 +2209,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2195,6 +2229,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -2530,11 +2565,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2619,11 +2657,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2636,6 +2677,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -2971,11 +3013,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3060,11 +3105,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3077,6 +3125,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -3412,11 +3461,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3501,11 +3553,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3518,6 +3573,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -3851,11 +3907,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3940,11 +3999,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3955,6 +4017,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -4288,11 +4351,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4377,11 +4443,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4392,6 +4461,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -4725,11 +4795,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4814,11 +4887,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4829,6 +4905,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -5162,11 +5239,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5251,11 +5331,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5266,6 +5349,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -5599,11 +5683,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5688,11 +5775,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5703,6 +5793,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -6036,11 +6127,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6125,11 +6219,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6140,6 +6237,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -6473,11 +6571,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6562,11 +6663,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6577,6 +6681,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -6910,11 +7015,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6999,11 +7107,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7014,6 +7125,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -7349,11 +7461,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7438,11 +7553,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7455,6 +7573,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -7790,11 +7909,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -7879,11 +8001,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -7896,6 +8021,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -8231,11 +8357,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8320,11 +8449,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8337,6 +8469,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -8672,11 +8805,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -8761,11 +8897,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -8778,6 +8917,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -9111,11 +9251,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9200,11 +9343,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9215,6 +9361,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -9548,11 +9695,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -9637,11 +9787,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -9652,6 +9805,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -9985,11 +10139,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10074,11 +10231,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10089,6 +10249,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -10422,11 +10583,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10511,11 +10675,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10526,6 +10693,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -10859,11 +11027,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -10948,11 +11119,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -10963,6 +11137,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -11296,11 +11471,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -11385,11 +11563,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -11400,6 +11581,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
