--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.drawImage.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.no_shadow.drawImage.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,10 +377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -392,6 +396,7 @@ source
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -553,11 +558,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -637,10 +645,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -655,6 +664,7 @@ source
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -816,11 +826,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -900,10 +913,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -918,6 +932,7 @@ source
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -1079,11 +1094,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1163,10 +1181,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1181,6 +1200,7 @@ source
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -1342,11 +1362,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1426,10 +1449,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1444,6 +1468,7 @@ destination
 -
 over
 '
+;
 const
 img_canvas
 =
@@ -1605,11 +1630,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1689,10 +1717,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1707,6 +1736,7 @@ destination
 -
 in
 '
+;
 const
 img_canvas
 =
@@ -1868,11 +1898,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1952,10 +1985,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -1970,6 +2004,7 @@ destination
 -
 out
 '
+;
 const
 img_canvas
 =
@@ -2131,11 +2166,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2215,10 +2253,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2233,6 +2272,7 @@ destination
 -
 atop
 '
+;
 const
 img_canvas
 =
@@ -2392,11 +2432,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2476,10 +2519,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2492,6 +2536,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 const
 img_canvas
 =
@@ -2651,11 +2696,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2735,10 +2783,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -2751,6 +2800,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 const
 img_canvas
 =
@@ -2910,11 +2960,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2994,10 +3047,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3010,6 +3064,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 const
 img_canvas
 =
@@ -3169,11 +3224,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3253,10 +3311,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3269,6 +3328,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 const
 img_canvas
 =
@@ -3428,11 +3488,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3512,10 +3575,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3528,6 +3592,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 const
 img_canvas
 =
@@ -3687,11 +3752,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3771,10 +3839,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -3787,6 +3856,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 const
 img_canvas
 =
@@ -3946,11 +4016,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4030,10 +4103,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4046,6 +4120,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 const
 img_canvas
 =
@@ -4205,11 +4280,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4289,10 +4367,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4305,6 +4384,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 const
 img_canvas
 =
@@ -4466,11 +4546,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4550,10 +4633,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4568,6 +4652,7 @@ color
 -
 dodge
 '
+;
 const
 img_canvas
 =
@@ -4729,11 +4814,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4813,10 +4901,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -4831,6 +4920,7 @@ color
 -
 burn
 '
+;
 const
 img_canvas
 =
@@ -4992,11 +5082,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5076,10 +5169,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5094,6 +5188,7 @@ hard
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5255,11 +5350,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5339,10 +5437,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5357,6 +5456,7 @@ soft
 -
 light
 '
+;
 const
 img_canvas
 =
@@ -5516,11 +5616,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5600,10 +5703,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5616,6 +5720,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 const
 img_canvas
 =
@@ -5775,11 +5880,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5859,10 +5967,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -5875,6 +5984,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 const
 img_canvas
 =
@@ -6034,11 +6144,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6118,10 +6231,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6134,6 +6248,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 const
 img_canvas
 =
@@ -6293,11 +6408,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6377,10 +6495,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6393,6 +6512,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 const
 img_canvas
 =
@@ -6552,11 +6672,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6636,10 +6759,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6652,6 +6776,7 @@ globalCompositeOperation
 '
 color
 '
+;
 const
 img_canvas
 =
@@ -6811,11 +6936,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6895,10 +7023,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 /
 /
 No
@@ -6911,6 +7040,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 const
 img_canvas
 =
