--- a/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.shadow.fillRect.html
+++ b/testing/web-platform/tests/html/canvas/element/compositing/2d.composite.grid.filter.shadow.fillRect.html
@@ -80,13 +80,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 "
 >
 <
@@ -290,11 +290,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -374,10 +377,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -395,11 +399,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -412,6 +419,7 @@ source
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -540,11 +548,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -624,10 +635,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -645,11 +657,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -662,6 +677,7 @@ source
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -790,11 +806,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -874,10 +893,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -895,11 +915,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -912,6 +935,7 @@ source
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -1040,11 +1064,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1124,10 +1151,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1145,11 +1173,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1162,6 +1193,7 @@ source
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -1290,11 +1322,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1374,10 +1409,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1395,11 +1431,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1412,6 +1451,7 @@ destination
 -
 over
 '
+;
 ctx
 .
 fillStyle
@@ -1540,11 +1580,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1624,10 +1667,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1645,11 +1689,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1662,6 +1709,7 @@ destination
 -
 in
 '
+;
 ctx
 .
 fillStyle
@@ -1790,11 +1838,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1874,10 +1925,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -1895,11 +1947,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -1912,6 +1967,7 @@ destination
 -
 out
 '
+;
 ctx
 .
 fillStyle
@@ -2040,11 +2096,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2124,10 +2183,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2145,11 +2205,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2162,6 +2225,7 @@ destination
 -
 atop
 '
+;
 ctx
 .
 fillStyle
@@ -2288,11 +2352,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2372,10 +2439,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2393,11 +2461,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2408,6 +2479,7 @@ globalCompositeOperation
 '
 lighter
 '
+;
 ctx
 .
 fillStyle
@@ -2534,11 +2606,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2618,10 +2693,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2639,11 +2715,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2654,6 +2733,7 @@ globalCompositeOperation
 '
 copy
 '
+;
 ctx
 .
 fillStyle
@@ -2780,11 +2860,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -2864,10 +2947,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -2885,11 +2969,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2900,6 +2987,7 @@ globalCompositeOperation
 '
 xor
 '
+;
 ctx
 .
 fillStyle
@@ -3026,11 +3114,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3110,10 +3201,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3131,11 +3223,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3146,6 +3241,7 @@ globalCompositeOperation
 '
 multiply
 '
+;
 ctx
 .
 fillStyle
@@ -3272,11 +3368,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3356,10 +3455,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3377,11 +3477,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3392,6 +3495,7 @@ globalCompositeOperation
 '
 screen
 '
+;
 ctx
 .
 fillStyle
@@ -3518,11 +3622,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3602,10 +3709,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3623,11 +3731,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3638,6 +3749,7 @@ globalCompositeOperation
 '
 overlay
 '
+;
 ctx
 .
 fillStyle
@@ -3764,11 +3876,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -3848,10 +3963,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -3869,11 +3985,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -3884,6 +4003,7 @@ globalCompositeOperation
 '
 darken
 '
+;
 ctx
 .
 fillStyle
@@ -4010,11 +4130,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4094,10 +4217,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4115,11 +4239,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4130,6 +4257,7 @@ globalCompositeOperation
 '
 lighten
 '
+;
 ctx
 .
 fillStyle
@@ -4258,11 +4386,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4342,10 +4473,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4363,11 +4495,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4380,6 +4515,7 @@ color
 -
 dodge
 '
+;
 ctx
 .
 fillStyle
@@ -4508,11 +4644,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4592,10 +4731,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4613,11 +4753,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4630,6 +4773,7 @@ color
 -
 burn
 '
+;
 ctx
 .
 fillStyle
@@ -4758,11 +4902,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -4842,10 +4989,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -4863,11 +5011,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -4880,6 +5031,7 @@ hard
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5008,11 +5160,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5092,10 +5247,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5113,11 +5269,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5130,6 +5289,7 @@ soft
 -
 light
 '
+;
 ctx
 .
 fillStyle
@@ -5256,11 +5416,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5340,10 +5503,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5361,11 +5525,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5376,6 +5543,7 @@ globalCompositeOperation
 '
 difference
 '
+;
 ctx
 .
 fillStyle
@@ -5502,11 +5670,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5586,10 +5757,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5607,11 +5779,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5622,6 +5797,7 @@ globalCompositeOperation
 '
 exclusion
 '
+;
 ctx
 .
 fillStyle
@@ -5748,11 +5924,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -5832,10 +6011,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -5853,11 +6033,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -5868,6 +6051,7 @@ globalCompositeOperation
 '
 hue
 '
+;
 ctx
 .
 fillStyle
@@ -5994,11 +6178,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6078,10 +6265,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6099,11 +6287,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6114,6 +6305,7 @@ globalCompositeOperation
 '
 saturation
 '
+;
 ctx
 .
 fillStyle
@@ -6240,11 +6432,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6324,10 +6519,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6345,11 +6541,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6360,6 +6559,7 @@ globalCompositeOperation
 '
 color
 '
+;
 ctx
 .
 fillStyle
@@ -6486,11 +6686,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -6570,10 +6773,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 ctx
 .
 shadowOffsetX
@@ -6591,11 +6795,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -6606,6 +6813,7 @@ globalCompositeOperation
 '
 luminosity
 '
+;
 ctx
 .
 fillStyle
